--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 FLAGS = -Wall -Wextra
-SOURCES = main.c resolvers.c technical.c print_funs/*.c libft/*.c
+SOURCES = main.c resolvers.c technical.c print_helpers.c print_funs/*.c libft/*.c
 OBJECTS = *.o
 
 NAME = libftprintf.a
