--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,7 +1,54 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: kmerkulo <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2018/12/19 12:56:23 by kmerkulo          #+#    #+#              #
+#    Updated: 2018/12/19 12:56:27 by kmerkulo         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 CC = gcc
-FLAGS = -Wall -Wextra
-SOURCES = main.c resolvers.c technical.c print_helpers.c print_funs/*.c libft/*.c
-OBJECTS = *.o
+FLAGS = -Wall -Wextra -Werror
+LIBDIR = libft
+PRINTDIR = print_funs
+SOURCES = resolvers.c technical.c print_helpers.c $(addprefix $(PRINTDIR)/, \
+            print_b.c print_c.c print_d.c print_else.c print_f.c print_o.c \
+            print_p.c print_s.c print_u.c print_x.c) \
+            $(addprefix $(LIBDIR)/, ft_atoi.c ft_bzero.c ft_isalnum.c \
+            ft_isalpha.c ft_isascii.c ft_isblank.c ft_isdigit.c ft_islower.c \
+            ft_isnumber.c ft_isprint.c ft_isupper.c ft_itoa.c ft_lstadd.c \
+            ft_lstdel.c ft_lstdelone.c ft_lstiter.c ft_lstmap.c ft_lstnew.c \
+            ft_memalloc.c ft_memccpy.c ft_memchr.c ft_memcmp.c ft_memcpy.c \
+            ft_memdel.c ft_memmove.c ft_memset.c ft_printf.c ft_putchar.c \
+            ft_putchar_fd.c ft_putendl.c ft_putendl_fd.c ft_putnbr.c \
+            ft_putnbr_fd.c ft_putnstr.c ft_putstr.c ft_putstr_fd.c ft_strcat.c \
+            ft_strchr.c ft_strclr.c ft_strcmp.c ft_strcpy.c ft_strdel.c \
+            ft_strdup.c ft_strequ.c ft_striter.c ft_striteri.c ft_strjoin.c \
+            ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strmap.c ft_strmapi.c \
+            ft_strncat.c ft_strncmp.c ft_strncpy.c ft_strndup.c ft_strnequ.c \
+            ft_strnew.c ft_strnstr.c ft_strrchr.c ft_strsplit.c ft_strstr.c \
+            ft_strsub.c ft_strtrim.c ft_strtrimc.c ft_tolower.c ft_toupper.c \
+            get_next_line.c)
+OBJECTS = ft_atoi.o ft_bzero.o ft_isalnum.o ft_isalpha.o ft_isascii.o \
+            ft_isblank.o ft_isdigit.o ft_islower.o ft_isnumber.o ft_isprint.o \
+            ft_isupper.o ft_itoa.o ft_lstadd.o ft_lstdel.o ft_lstdelone.o \
+            ft_lstiter.o ft_lstmap.o ft_lstnew.o ft_memalloc.o ft_memccpy.o \
+            ft_memchr.o ft_memcmp.o ft_memcpy.o ft_memdel.o ft_memmove.o \
+            ft_memset.o ft_printf.o ft_putchar.o ft_putchar_fd.o ft_putendl.o \
+            ft_putendl_fd.o ft_putnbr.o ft_putnbr_fd.o ft_putnstr.o ft_putstr.o \
+            ft_putstr_fd.o ft_strcat.o ft_strchr.o ft_strclr.o ft_strcmp.o \
+            ft_strcpy.o ft_strdel.o ft_strdup.o ft_strequ.o ft_striter.o \
+            ft_striteri.o ft_strjoin.o ft_strlcat.o ft_strlcpy.o ft_strlen.o \
+            ft_strmap.o ft_strmapi.o ft_strncat.o ft_strncmp.o ft_strncpy.o \
+            ft_strndup.o ft_strnequ.o ft_strnew.o ft_strnstr.o ft_strrchr.o \
+            ft_strsplit.o ft_strstr.o ft_strsub.o ft_strtrim.o ft_strtrimc.o \
+            ft_tolower.o ft_toupper.o get_next_line.o print_b.o print_c.o \
+            print_d.o print_else.o print_f.o print_helpers.o print_o.o print_p.o \
+            print_s.o print_u.o print_x.o resolvers.o technical.o
+
 
 NAME = libftprintf.a
 
@@ -12,7 +59,7 @@ $(NAME): $(OBJECTS)
 	@ranlib $(NAME)
 
 $(OBJECTS): $(SOURCES)
-	@$(CC)  -c $(SOURCES) $(FLAGS)
+	@$(CC) -c $(SOURCES) $(FLAGS)
 
 clean:
 	@rm -f $(OBJECTS)
@@ -24,5 +71,5 @@ re: fclean all
 
 main: re
 	@rm -f $(OBJECTS)
-	@$(CC) -o test $(NAME)
+	@$(CC) -o test main.c $(NAME)
 	@./test
