working on Filler

--- a/Filler/Makefile
+++ b/Filler/Makefile
@@ -61,18 +61,34 @@ s02: all
 s03: all
 	@cd resources && ./filler_vm -p1 ../kmerkulo.filler -f maps/map03
 
-m00: all
-	@cd resources && ./filler_vm -p1 players/hcao.filler \
-	-p2 ../kmerkulo.filler -f maps/map00
+m00p1: all
+	@cd resources && ./filler_vm -p1 ../kmerkulo.filler \
+    	 -p2 players/hcao.filler -f maps/map00
 
-m01: all
-	@cd resources && ./filler_vm -p1 players/hcao.filler \
-	-p2 ../kmerkulo.filler -f maps/map01
+m01p1: all
+	@cd resources && ./filler_vm -p1 ../kmerkulo.filler \
+    	 -p2 players/hcao.filler -f maps/map01
 
-m02: all
-	@cd resources && ./filler_vm -p1 players/hcao.filler \
-	-p2 ../kmerkulo.filler -f maps/map02
+m02p1: all
+	@cd resources && ./filler_vm -p1 ../kmerkulo.filler \
+    	 -p2 players/hcao.filler -f maps/map02
 
-m03: all
+m03p1: all
+	@cd resources && ./filler_vm -p1 ../kmerkulo.filler \
+	 -p2 players/hcao.filler -f maps/map03
+
+m00p2: all
 	@cd resources && ./filler_vm -p1 players/hcao.filler \
-	-p2 ../kmerkulo.filler -f maps/map03
+    -p2 ../kmerkulo.filler -f maps/map00
+
+m01p2: all
+	@cd resources && ./filler_vm -p1 players/hcao.filler \
+    -p2 ../kmerkulo.filler -f maps/map01
+
+m02p2: all
+	@cd resources && ./filler_vm -p1 players/hcao.filler \
+    -p2 ../kmerkulo.filler -f maps/map02
+
+m03p2: all
+	@cd resources && ./filler_vm -p1 players/hcao.filler \
+    -p2 ../kmerkulo.filler -f maps/map03
