--- a/FdF/libft/Makefile
+++ b/FdF/libft/Makefile
@@ -28,7 +28,7 @@ SRC =		resolvers.c technical.c print_helpers.c ft_printf.c \
             ft_isnumber.c ft_isprint.c ft_isupper.c ft_itoa.c ft_lstadd.c \
             ft_lstdel.c ft_lstdelone.c ft_lstiter.c ft_lstmap.c ft_lstnew.c \
             ft_memalloc.c ft_memccpy.c ft_memchr.c ft_memcmp.c ft_memcpy.c \
-            ft_memdel.c ft_memmove.c ft_memset.c ft_putchar.c \
+            ft_memdel.c ft_memdel_arr.c ft_memmove.c ft_memset.c ft_putchar.c \
             ft_putchar_fd.c ft_putendl.c ft_putendl_fd.c ft_putnbr.c \
             ft_putnbr_fd.c ft_putnstr.c ft_putstr.c ft_putstr_fd.c ft_strcat.c \
             ft_strchr.c ft_strclr.c ft_strcmp.c ft_strcpy.c ft_strdel.c \
