Lem-in. small fixes

--- a/Lem_in/Makefile
+++ b/Lem_in/Makefile
@@ -50,6 +50,17 @@ $(OBJ_DIR)%.o:	$(SRC_DIR)%.c $(INCL_DIR)*.h
 clean:
 	@rm -rf $(OBJ_DIR)
 	@echo "\033[32mCleaned!\033[0m"
+
+lib-clean:
+	@$(MAKE) clean -C libft
+
 fclean:		clean
 	@rm -f $(NAME)
+
+lib-fclean:
+	@$(MAKE) fclean -C libft
+
 re:			fclean all
+
+lib-re:
+	@$(MAKE) re -C libft	
